<?xml version="1.0"?>
<package>
  <name>beagleboneblack</name>
  <version>0.1.0</version>
  <description>TempleWaterfOWL code to be placed on BeagleBone Black</description>

  <maintainer email="temple.roboboat.2015@gmail.com">TempleWaterfOWLS</maintainer>
  <license>BSD</license>
  <url type="website">http://sites.temple.edu/waterfowls/</url>
  <author email="jacob.sloan.simon@gmail.com">Jake Simon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>